fix:controls button misalignment on details pop up

--- a/deepfence_ui/app/scripts/components/common/detail-modal/body.module.scss
+++ b/deepfence_ui/app/scripts/components/common/detail-modal/body.module.scss
@@ -36,7 +36,7 @@
   margin-top: 6px;
   color: $text-primary;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 16px;
 
   overflow-wrap: break-word;
 
